# solana-batch-transfer-smart-contract

./: Anchor.toml  README.md  build.sh  deploy.sh  package-lock.json  package.json  rust-toolchain.toml  test.sh  tsconfig.json
programs/batch-transfer/: Cargo.toml
programs/batch-transfer/src/: lib.rs
programs/batch-transfer/tests/: all_test.rs  batch_transfer_sol_test.rs  batch_transfer_token_test.rs  check_balance_sol_test.rs  check_balance_token_test.rs  comprehensive_test.rs  deposit_test.rs  fee_set_test.rs  fee_unauthorized_test.rs  initialize_basic_test.rs  initialize_duplicate_test.rs  initialize_test.rs  initialize_unauthorized_test.rs  large_batch_test.rs  mixed_transfer_test.rs  multiple_transfers_test.rs  performance_test.rs  security_test.rs  set_fee_test.rs  set_supported_token_test.rs  simulate_test.rs  token_comprehensive_test.rs  transfer_sol_basic_test.rs  transfer_sol_empty_test.rs  transfer_sol_insufficient_balance_test.rs  transfer_sol_invalid_recipient_test.rs  transfer_to_self_test.rs  transfer_token_basic_test.rs  transfer_token_empty_test.rs  transfer_token_insufficient_balance_test.rs  transfer_token_invalid_recipient_test.rs  transfer_zero_amount_test.rs  utils_test.rs  withdraw_fee_test.rs  withdraw_fee_unauthorized_test.rs  withdraw_test.rs
tests/: advanced-batch-transfer.test.ts  all-test.ts  batch-transfer-sol-test.ts  batch-transfer-token-test.ts  batch-transfer.test.ts  deposit-test.ts  faucet-test.ts  helper.ts  initialize-test.ts  reset-user-account-test.ts  set-fee-test.ts  set-supported-token-test.ts  simple-batch-transfer.test.ts  (+2 more)
(+1 files in other folders)
