[package]
name = "batch-transfer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "batch_transfer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
futures = "0.3"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-program = "1.16.0"
solana-sdk = "1.16.0"
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["full"] }
spl-token = "4.0.0"
bs58 = "0.5.0"
