[package]
name = "batch-transfer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "batch_transfer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
futures = "0.3.31"

[dev-dependencies]
solana-program-test = "1.18.26"
solana-program = "1.18.26"
solana-sdk = "1.18.26"
anyhow = "1.0.96"
tokio = { version = "1.43.0", features = ["full"] }
spl-token = "7.0.0"
bs58 = "0.5.1"
curve25519-dalek = "4.1.3"